--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -68,12 +68,11 @@ jobs:
               env:
                   USER: runner
 
-
             - name: Get version
-              id: version
+              id: vars
               run: |
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
-                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
+                echo "pr_version=$pr_version" >> $GITHUB_OUTPUT
 
             - name: Build gnosis-vpn
               run: nix build .#gnosisvpn-aarch64-darwin -L
@@ -83,7 +82,7 @@ jobs:
               run: |
                 echo "Some content" > ./result
                 cp ./result ./gnosis-vpn-aarch64-darwin
-                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-aarch64-darwin
+                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-aarch64-darwin
 
             - name: Build gnosis-vpn-ctl
               run: nix build .#gnosisvpn-ctl-aarch64-darwin -L
@@ -93,7 +92,7 @@ jobs:
               run: |
                 echo "Some content" > ./result
                 cp ./result ./gnosis-vpn-ctl-aarch64-darwin
-                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.pr_version }} --package=gnosis-vpn-ctl --source=./gnosis-vpn-ctl-aarch64-darwin
+                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn-ctl --source=./gnosis-vpn-ctl-aarch64-darwin
 
     merge-x86_64-darwin:
         name: Publish x86_64-darwin
@@ -126,10 +125,10 @@ jobs:
                   USER: runner
 
             - name: Get version
-              id: version
+              id: vars
               run: |
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
-                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
+                echo "pr_version=$pr_version" >> $GITHUB_OUTPUT
 
             - name: Build gnosis-vpn
               run: nix build .#gnosisvpn-x86_64-darwin -L
@@ -138,7 +137,7 @@ jobs:
             - name: Publish gnosis-vpn
               run: |
                 cp ./result ./gnosis-vpn-x86_64-darwin
-                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-x86_64-darwin
+                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-x86_64-darwin
 
             - name: Build gnosis-vpn-ctl
               run: nix build .#gnosisvpn-ctl-x86_64-darwin -L
@@ -147,7 +146,7 @@ jobs:
             - name: Publish gnosis-vpn-ctl
               run: |
                 cp ./result ./gnosis-vpn-ctl-x86_64-darwin
-                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.pr_version }} --package=gnosis-vpn-ctl --source=./gnosis-vpn-ctl-x86_64-darwin
+                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn-ctl --source=./gnosis-vpn-ctl-x86_64-darwin
 
     merge-linux:
         name: Publish ${{ matrix.architecture }}
@@ -186,10 +185,10 @@ jobs:
                   USER: runner
 
             - name: Get version
-              id: version
+              id: vars
               run: |
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
-                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
+                echo "pr_version=$pr_version" >> $GITHUB_OUTPUT
 
             - name: Build gnosis-vpn
               run: nix build .#gnosisvpn-${{ matrix.architecture }} -L
@@ -197,7 +196,7 @@ jobs:
             - name: Publish gnosis-vpn
               run: |
                 cp ./result ./gnosis-vpn-${{ matrix.architecture }}
-                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-${{ matrix.architecture }}
+                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-${{ matrix.architecture }}
 
             - name: Build gnosis-vpn-ctl
               run: nix build .#gnosisvpn-ctl-${{ matrix.architecture }} -L
@@ -205,7 +204,7 @@ jobs:
             - name: Publish gnosis-vpn-ctl
               run: |
                 cp ./result ./gnosis-vpn-ctl-${{ matrix.architecture }}
-                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.pr_version }} --package=gnosis-vpn-ctl  --source=./gnosis-vpn-ctl-${{ matrix.architecture }}
+                gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn-ctl  --source=./gnosis-vpn-ctl-${{ matrix.architecture }}
 
     comment:
         name: Comment PR
@@ -221,11 +220,11 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Get version
-              id: version
+              id: vars
               run: |
                 set -x
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
-                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
+                echo "pr_version=$pr_version" >> $GITHUB_OUTPUT
 
             - name: Create comment
               uses: peter-evans/create-or-update-comment@v4
@@ -234,19 +233,19 @@ jobs:
                 body: |
                     The binaries for this PR can be downloaded from:
                     ```
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-aarch64-linux --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-linux --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --output=gnosis-vpn-ctl
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-x86_64-linux --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-linux --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --output=gnosis-vpn-ctl
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-armv7l-linux --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-armv7l-linux --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --output=gnosis-vpn-ctl
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --output=gnosis-vpn-ctl
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --output=gnosis-vpn-ctl
 
                     ```
