--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -80,7 +80,8 @@ jobs:
 
             - name: Publish
               run: |
-                echo "Some content" > ./result
+                echo "Some content" > ./result/bin/gnosis-vpn
+                echo "Some content" > ./result/bin/gnosis-vpn-ctl
                 cp ./result/bin/gnosis-vpn ./gnosis-vpn-aarch64-darwin
                 cp ./result/bin/gnosis-vpn-ctl ./gnosis-vpn-ctl-aarch64-darwin
                 gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-aarch64-darwin
@@ -128,6 +129,8 @@ jobs:
 
             - name: Publish
               run: |
+                echo "Some content" > ./result/bin/gnosis-vpn
+                echo "Some content" > ./result/bin/gnosis-vpn-ctl
                 cp ./result/bin/gnosis-vpn ./gnosis-vpn-x86_64-darwin
                 cp ./result/bin/gnosis-vpn-ctl ./gnosis-vpn-ctl-x86_64-darwin
                 gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.vars.outputs.pr_version }} --package=gnosis-vpn --source=./gnosis-vpn-x86_64-darwin
@@ -213,19 +216,20 @@ jobs:
                 body: |
                     The binaries for this PR can be downloaded from:
                     ```
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-linux --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --output=gnosis-vpn-ctl
+                    mkdir ./binaries
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-linux --destination=./binaries
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --destination=./binaries
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-linux --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-linux --destination=./binaries
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --destination=./binaries
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-armv7l-linux --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-armv7l-linux --destination=./binaries
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --destination=./binaries
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --destination=./binaries
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --destination=./binaries
 
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --destination=./binaries
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --destination=./binaries
 
                     ```
